--- a/Asteroids/Asteroids/Properties/Resources.resx
+++ b/Asteroids/Asteroids/Properties/Resources.resx
@@ -121,8 +121,8 @@
   <data name="Arrow" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Arrow.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="Astro1" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\Astro1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="Astro1_2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Astro1_2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="Astro2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Astro2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
