--- a/Asteroids/Asteroids/Properties/Resources.resx
+++ b/Asteroids/Asteroids/Properties/Resources.resx
@@ -142,4 +142,10 @@
   <data name="Astro7" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Astro7.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="tirinho" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\tirinho.mp3;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="TiroCerto" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\TiroCerto.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
